# deepfake-detection-model

./: .gitignore  deepfake_detection.ipynb  demo_json_usage.py  extract_timestamps.py  pyproject.toml  test_json_output.py  train_image_model.py  train_video_model.py
src/data/: test.json  train.json  vid_train.json  videos.json
src/modules/: analysis_modules.py  dataset.py  face_detector.py  frontend.py  img_classifier.py  img_dataset.py  inference.py  postprocessor.py  test_inference.py  utility.py  vid_classifier.py  vid_dataset.py  videoface_extractor.py
